Corrected image distortion component

--- a/Defining Art Frontend/src/Components/ImagesComponent/Images.css
+++ b/Defining Art Frontend/src/Components/ImagesComponent/Images.css
@@ -13,7 +13,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: -1;
     width: 600px;
 }
 @media (max-width: 841px) {
